# bag_recorder

./: CMakeLists.txt  package.xml
include/: bag_launcher.h  bag_recorder.h  heartbeat.h
include/bag_recorder/: bag_recorder.h
launch/: default.launch  launch.py
msg/: Rosbag.msg
src/: bag_launcher.cpp  bag_recorder.cpp  heartbeat.cpp  rosbag_recorder_node.cpp
test/: test_multithreading.cpp  test_multithreading.test
