<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_recorder</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="som.vaidehi920@gmail.com">vaidehi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>rclcpp</depend>
  <depend>std_msgs</depend> -->

  <depend>boost</depend>
  <depend>rclcpp</depend> <!-- replaces roscpp -->
  <depend>rosbag2_cpp</depend> <!-- replaces rosbag_storage -->
  <depend>rosidl_default_generators</depend> <!-- replaces message_generation -->
  <depend>rosidl_default_runtime</depend> <!-- replaces message_runtime -->
  <depend>std_msgs</depend>

  <!-- <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


<!-- <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export> -->
